feat(alertas): completar analisis de riesgo academico